update appjs path for auth sql account to usr, updated login and login css, gave definitions to some routes

--- a/project/public/stylesheets/stylesheet.css
+++ b/project/public/stylesheets/stylesheet.css
@@ -170,6 +170,14 @@ main > p {
   border-radius:50%;
 }
 
+.abcRioButton.abcRioButtonLightBlue { margin: 0 auto;}
+
+.login h1{
+    text-align: center;
+    color:white;
+    text-shadow: 1px 1px black;
+}
+
 .login header {
   display: block;
   margin-left: auto;
