updated login form to new, css login positioned gbutton, index route /home added

--- a/project/public/stylesheets/stylesheet.css
+++ b/project/public/stylesheets/stylesheet.css
@@ -365,3 +365,9 @@ main > p {
 table, th, td {
   border: 1px solid black;
 }
+
+.abcRioButton{
+    margin-left:auto;
+    margin-right:auto;
+    display:block;
+}
